--- a/drinks.html
+++ b/drinks.html
@@ -13,7 +13,7 @@
 
 <header>
     The most
-    <mark>delicious salad ever!</mark>
+    <mark>delicious and premium drinks ever!</mark>
     <nav>
         <ul>
             <li>
@@ -51,83 +51,109 @@
 </header>
 
 <section>
-    <h2>Salad</h2>
+    <h2>Drinks</h2>
     <hr>
-    <ul class="salad-list-parent">
+    <ul class="drinks-list-parent">
         <li>
-            <img src="assets/img/salad/caesar.jpg" alt="Could not load!">
+            <img src="assets/img/drinks/cola.png" alt="Could not load!">
             <div class="content-item">
-                <div class="item-text">Caesar</div>
+                <div class="item-text">Coca-Cola</div>
                 <div class="item-ico" title="4 types of cheese..."><i class="fas fa-info-circle fa-2x"></i>
                 </div>
             </div>
             <div class="item-price" data-value="90">
-                <div class="item-text">40 lei</div>
+                <div class="item-text">20 lei</div>
                 <div class="item-ico">
                     <i class="fas fa-cart-arrow-down"></i>
                 </div>
             </div>
         </li>
         <li>
-            <img src="assets/img/salad/chick.jpg" alt="Could not load!">
+            <img src="assets/img/drinks/pepsi.png" alt="Could not load!">
             <div class="content-item">
-                <div class="item-text">Chicken</div>
+                <div class="item-text">Pepsi</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-info-circle fa-2x"></i></div>
             </div>
             <div class="item-price" data-value="80">
-                <div class="item-text">50 lei</div>
+                <div class="item-text">25 lei</div>
                 <div class="item-ico"><i class="fas fa-cart-arrow-down"></i></div>
             </div>
         </li>
         <li>
-            <img src="assets/img/salad/greek.jpg" alt="Could not load!">
+            <img src="assets/img/drinks/rcola.png" alt="Could not load!">
             <div class="content-item">
-                <div class="item-text">Greek</div>
+                <div class="item-text">RC-Cola</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-info-circle fa-2x"></i></div>
             </div>
             <div class="item-price" data-value="80">
-                <div class="item-text">70 lei</div>
+                <div class="item-text">20 lei</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-cart-arrow-down"></i></div>
             </div>
         </li>
         <li>
-            <img src="assets/img/salad/hunt.jpg" alt="Could not load!">
+            <img src="assets/img/drinks/fanta.png" alt="Could not load!">
             <div class="content-item">
-                <div class="item-text">Hunter</div>
+                <div class="item-text">Fanta</div>
                 <div class="sitem-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-info-circle fa-2x"></i></div>
             </div>
             <div class="item-price" data-value="80">
-                <div class="item-text">75 lei</div>
+                <div class="item-text">20 lei</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-cart-arrow-down"></i></div>
             </div>
         </li>
         <li>
-            <img src="assets/img/salad/tuna.jpg" alt="Could not load!">
+            <img src="assets/img/drinks/sexb.png" alt="Could not load!">
             <div class="content-item">
-                <div class="item-text">Tuna</div>
+                <div class="item-text">SexOnTheBeach</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-info-circle fa-2x"></i></div>
             </div>
             <div class="item-price" data-value="80">
-                <div class="item-text">80 lei</div>
+                <div class="item-text">60 lei</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-cart-arrow-down"></i></div>
             </div>
         </li>
         <li>
-            <img src="assets/img/salad/veggy.jpg" alt="Could not load!">
+            <img src="assets/img/drinks/sprite.png" alt="Could not load!">
             <div class="content-item">
-                <div class="item-text">Veggy</div>
+                <div class="item-text">Sprite</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-info-circle fa-2x"></i></div>
             </div>
             <div class="item-price" data-value="80">
-                <div class="item-text">35 lei</div>
+                <div class="item-text">15 lei</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/drinks/mojito.png" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">Mojito</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">45 lei</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/drinks/sweet.png" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">BlueLagoon</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">65 lei</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-cart-arrow-down"></i></div>
             </div>
