--- a/pizza.html
+++ b/pizza.html
@@ -27,9 +27,8 @@
                         <a href="sushi.html">Sushi</a>
                         <a href="salad.html">Salads</a>
                         <a href="dessert.html">Desserts</a>
-                        <a href="xx">Soup</a>
-                        <a href="xx">Drinks</a>
-                        <a href="xx">Hot</a>
+                        <a href="drinks.html">Drinks</a>
+                        <a href="snacks.html">Hot</a>
                     </div>
                 </div>
             </li>
