--- a/drinks.html
+++ b/drinks.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Sushi-Menu</title>
+    <title>Drinks-Menu</title>
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="assets/main/media.css">
     <link rel="stylesheet" href="assets/main/style.css">
@@ -16,6 +16,15 @@
     <mark>delicious and premium drinks ever!</mark>
     <nav>
         <ul>
+            <li>
+                <div class="dropdown"><a href="cart.html"><i class="fas fa-shopping-cart"></i></a>
+                    <div class="dropdown-content">
+                        Your cart has :
+                        <mark>0</mark>
+                        items!
+                    </div>
+                </div>
+            </li>
             <li>
                 <a href="index.html">Home</a>
             </li>
