--- a/snacks.html
+++ b/snacks.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Desserts-Menu</title>
+    <title>Snacks-Menu</title>
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="assets/main/media.css">
     <link rel="stylesheet" href="assets/main/style.css">
@@ -13,13 +13,13 @@
 
 <header>
     The most
-    <mark>delicious desserts ever!</mark>
+    <mark>delicious and premium snacks ever!</mark>
     <nav>
         <ul>
             <li>
                 <div class="dropdown"><a href="cart.html"><i class="fas fa-shopping-cart"></i></a>
                     <div class="dropdown-content">
-                        YYour cart has :
+                        Your cart has :
                         <mark>0</mark>
                         items!
                     </div>
@@ -60,78 +60,65 @@
 </header>
 
 <section>
-    <h2>Desserts</h2>
+    <h2>Snacks</h2>
     <hr>
-    <ul class="dessert-list-parent">
+    <ul class="snacks-list-parent">
         <li>
-            <img src="assets/img/backeries/bisc.jpg" alt="Could not load!">
+            <img src="assets/img/snacks/ches.jpg" alt="Could not load!">
             <div class="content-item">
-                <div class="item-text">Biscuits</div>
+                <div class="item-text">Cheese plateau</div>
                 <div class="item-ico" title="4 types of cheese..."><i class="fas fa-info-circle fa-2x"></i>
                 </div>
             </div>
             <div class="item-price" data-value="90">
-                <div class="item-text">20 lei</div>
+                <div class="item-text">50 lei</div>
                 <div class="item-ico">
                     <i class="fas fa-cart-arrow-down"></i>
                 </div>
             </div>
         </li>
         <li>
-            <img src="assets/img/backeries/chcake.jpg" alt="Could not load!">
+            <img src="assets/img/snacks/foc.jpg" alt="Could not load!">
             <div class="content-item">
-                <div class="item-text">CheesseCake</div>
+                <div class="item-text">Bread with sauce</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-info-circle fa-2x"></i></div>
             </div>
             <div class="item-price" data-value="80">
-                <div class="item-text">40 lei</div>
+                <div class="item-text">25 lei</div>
                 <div class="item-ico"><i class="fas fa-cart-arrow-down"></i></div>
             </div>
         </li>
         <li>
-            <img src="assets/img/backeries/cherry.jpg" alt="Could not load!">
+            <img src="assets/img/snacks/lay.png" alt="Could not load!">
             <div class="content-item">
-                <div class="item-text">Cherry-IceCream</div>
+                <div class="item-text">Lay's</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-info-circle fa-2x"></i></div>
             </div>
             <div class="item-price" data-value="80">
-                <div class="item-text">50 lei</div>
+                <div class="item-text">25 lei</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-cart-arrow-down"></i></div>
             </div>
         </li>
         <li>
-            <img src="assets/img/backeries/cioco.jpg" alt="Could not load!">
+            <img src="assets/img/snacks/nuggets.jpg" alt="Could not load!">
             <div class="content-item">
-                <div class="item-text">Chocolate-Ice-Cream</div>
+                <div class="item-text">Nuggets</div>
                 <div class="sitem-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-info-circle fa-2x"></i></div>
             </div>
             <div class="item-price" data-value="80">
-                <div class="item-text">35 lei</div>
+                <div class="item-text">80 lei</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-cart-arrow-down"></i></div>
             </div>
         </li>
         <li>
-            <img src="assets/img/backeries/fondant.jpg" alt="Could not load!">
+            <img src="assets/img/snacks/pring.png" alt="Could not load!">
             <div class="content-item">
-                <div class="item-text">Fondant</div>
-                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                        class="fas fa-info-circle fa-2x"></i></div>
-            </div>
-            <div class="item-price" data-value="80">
-                <div class="item-text">50 lei</div>
-                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                        class="fas fa-cart-arrow-down"></i></div>
-            </div>
-        </li>
-        <li>
-            <img src="assets/img/backeries/fruit.jpg" alt="Could not load!">
-            <div class="content-item">
-                <div class="item-text">FruitSalad</div>
+                <div class="item-text">Pringles</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-info-circle fa-2x"></i></div>
             </div>
@@ -142,66 +129,14 @@
             </div>
         </li>
         <li>
-            <img src="assets/img/backeries/greek.jpg" alt="Could not load!">
+            <img src="assets/img/snacks/suh1.png" alt="Could not load!">
             <div class="content-item">
-                <div class="item-text">Greek-Ice</div>
+                <div class="item-text">Xpyc Team</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-info-circle fa-2x"></i></div>
             </div>
             <div class="item-price" data-value="80">
-                <div class="item-text">45 lei</div>
-                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                        class="fas fa-cart-arrow-down"></i></div>
-            </div>
-        </li>
-        <li>
-            <img src="assets/img/backeries/nico.jpg" alt="Could not load!">
-            <div class="content-item">
-                <div class="item-text">Nico-Choco</div>
-                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                        class="fas fa-info-circle fa-2x"></i></div>
-            </div>
-            <div class="item-price" data-value="80">
-                <div class="item-text">55 lei</div>
-                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                        class="fas fa-cart-arrow-down"></i></div>
-            </div>
-        </li>
-        <li>
-            <img src="assets/img/backeries/sacher.jpg" alt="Could not load!">
-            <div class="content-item">
-                <div class="item-text">Sacher</div>
-                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                        class="fas fa-info-circle fa-2x"></i></div>
-            </div>
-            <div class="item-price" data-value="80">
-                <div class="item-text">45 lei</div>
-                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                        class="fas fa-cart-arrow-down"></i></div>
-            </div>
-        </li>
-        <li>
-            <img src="assets/img/backeries/tir.jpg" alt="Could not load!">
-            <div class="content-item">
-                <div class="item-text">Tiramisu</div>
-                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                        class="fas fa-info-circle fa-2x"></i></div>
-            </div>
-            <div class="item-price" data-value="80">
-                <div class="item-text">35 lei</div>
-                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                        class="fas fa-cart-arrow-down"></i></div>
-            </div>
-        </li>
-        <li>
-            <img src="assets/img/backeries/tropic.jpg" alt="Could not load!">
-            <div class="content-item">
-                <div class="item-text">Tropic</div>
-                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                        class="fas fa-info-circle fa-2x"></i></div>
-            </div>
-            <div class="item-price" data-value="80">
-                <div class="item-text">45 lei</div>
+                <div class="item-text">15 lei</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-cart-arrow-down"></i></div>
             </div>
