--- a/sushi.html
+++ b/sushi.html
@@ -17,6 +17,15 @@
     <nav>
         <ul>
             <li>
+                <div class="dropdown"><a href="cart.html"><i class="fas fa-shopping-cart"></i></a>
+                    <div class="dropdown-content">
+                        Your cart has :
+                        <mark>0</mark>
+                        items!
+                    </div>
+                </div>
+            </li>
+            <li>
                 <a href="index.html">Home</a>
             </li>
             <li>
