--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
             </li>
             <li><a href="#">Restaurants</a></li>
-            <li><a href="#">News</a></li>
+            <li><a href="news.html">News</a></li>
             <li><a href="#">Job</a></li>
             <li>
                 <div class="dropdown"><a href="#">Services<i class="fas fa-angle-down"></i></a>
@@ -169,20 +169,17 @@
     </div>
 </main>
 
-<article id="adsPanel">
-    <ul class="parent">
-        <li onclick="window.location='http://google.com';">
-            <h2>
-                <mark>Our pizza menu!</mark>
-            </h2>
-            <div class="pizza-container"></div>
+<article>
+    <ul>
+        <li>
+            <div class="image-holder">
+                <div class="bottom-right">We're launching new Italian pizza! In all our restaurants!</div>
+            </div>
         </li>
-
-        <li onclick="window.location='http://google.com';">
-            <h2>
-                <mark>Our sushi menu!</mark>
-            </h2>
-            <div class="pizza-container-2"></div>
+        <li>
+            <div class="image-holder-2">
+                <div class="bottom-right">Also check out our japanese sushi!</div>
+            </div>
         </li>
     </ul>
 </article>
@@ -191,7 +188,7 @@
     <ul class="news-list">
         <li>
             <div class="news-list-content">
-                <img src="assets/img/news-img/restaurant.jpg" alt="x"/>
+                <img src="assets/img/rest-img/restaurant.jpg" alt="x"/>
                 <h2>From bussiness to
                     <mark>premium restaurants!</mark>
                 </h2>
@@ -199,7 +196,7 @@
         </li>
         <li>
             <div class="news-list-content">
-                <img src="assets/img/news-img/essence.jpg" alt="x">
+                <img src="assets/img/rest-img/essence.jpg" alt="x">
                 <h2>
                     <mark>World-wide</mark>
                     restaurants in your city!
@@ -208,7 +205,7 @@
         </li>
         <li>
             <div class="news-list-content">
-                <img src="assets/img/news-img/red.jpg" alt="x">
+                <img src="assets/img/rest-img/red.jpg" alt="x">
                 <h2>
                     <mark>Coffee</mark>
                     &
@@ -219,7 +216,7 @@
         </li>
         <li>
             <div class="news-list-content">
-                <img src="assets/img/news-img/strip.png" alt="x">
+                <img src="assets/img/rest-img/strip.png" alt="x">
                 <h2>We also have
                     <mark>Strip clubs</mark>
                     for our
@@ -229,7 +226,7 @@
         </li>
         <li>
             <div class="news-list-content">
-                <img src="assets/img/news-img/re4.jpg" alt="x">
+                <img src="assets/img/rest-img/re4.jpg" alt="x">
                 <h2>
                     <mark>Air-open</mark>
                     with a beautiful view in the most beautiful countries.
@@ -238,7 +235,7 @@
         </li>
         <li>
             <div class="news-list-content">
-                <img src="assets/img/news-img/sea.jpg" alt="x">
+                <img src="assets/img/rest-img/sea.jpg" alt="x">
                 <h2>
                     <mark>Underwater</mark>
                     restaurants in
