--- a/news.html
+++ b/news.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Snacks-Menu</title>
+    <title>Salad-Menu</title>
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="assets/main/media.css">
     <link rel="stylesheet" href="assets/main/style.css">
@@ -12,8 +12,7 @@
 <body>
 
 <header>
-    The most
-    <mark>delicious and premium snacks ever!</mark>
+    <mark>We love our customers!</mark>
     <nav>
         <ul>
             <li>
@@ -21,7 +20,9 @@
                     <div class="dropdown-content">
                         Your cart has :
                         <mark id="cart-count">0</mark>
-                        items in sum of <mark id="total-price"> 0</mark> lei!
+                        items in sum of
+                        <mark id="total-price"> 0</mark>
+                        lei!
                     </div>
                 </div>
             </li>
@@ -59,89 +60,100 @@
     </nav>
 </header>
 
-<section>
-    <h2>Snacks</h2>
-    <hr>
-    <ul class="snacks-list-parent">
+<section class="news-panel">
+    <ul class="news-content">
         <li>
-            <img src="assets/img/snacks/ches.jpg" alt="Could not load!">
-            <div class="content-item">
-                <div class="item-text">Cheese plateau</div>
-                <div class="item-ico" title="4 types of cheese..."><i class="fas fa-info-circle fa-2x"></i>
-                </div>
-            </div>
-            <div class="item-price" data-value="90">
-                <div class="item-text">50 lei</div>
-                <div class="item-ico">
-                    <i class="fas fa-cart-arrow-down"></i>
-                </div>
+            <div class="new-container">
+                <h2>lorem</h2>
+                <img src="assets/img/newsph/croissant.jpg" alt="Snow">
+                <div class="button_cont">
+                    <a class="new-a" href="X" target="_blank" rel="nofollow">
+                        <span>Go to the new...</span></a></div>
             </div>
         </li>
         <li>
-            <img src="assets/img/snacks/foc.jpg" alt="Could not load!">
-            <div class="content-item">
-                <div class="item-text">Bread with sauce</div>
-                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                        class="fas fa-info-circle fa-2x"></i></div>
-            </div>
-            <div class="item-price" data-value="80">
-                <div class="item-text">25 lei</div>
-                <div class="item-ico"><i class="fas fa-cart-arrow-down"></i></div>
+            <div class="new-container">
+                <h2>lorem</h2>
+                <img src="assets/img/newsph/croissant.jpg" alt="Snow">
+                <div class="button_cont">
+                    <a class="new-a" href="X" target="_blank" rel="nofollow">
+                        <span>Go to the new...</span></a></div>
             </div>
         </li>
         <li>
-            <img src="assets/img/snacks/lay.png" alt="Could not load!">
-            <div class="content-item">
-                <div class="item-text">Lay's</div>
-                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                        class="fas fa-info-circle fa-2x"></i></div>
-            </div>
-            <div class="item-price" data-value="80">
-                <div class="item-text">25 lei</div>
-                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                        class="fas fa-cart-arrow-down"></i></div>
+            <div class="new-container">
+                <h2>lorem</h2>
+                <img src="assets/img/newsph/croissant.jpg" alt="Snow">
+                <div class="button_cont">
+                    <a class="new-a" href="X" target="_blank" rel="nofollow">
+                        <span>Go to the new...</span></a></div>
             </div>
         </li>
         <li>
-            <img src="assets/img/snacks/nuggets.jpg" alt="Could not load!">
-            <div class="content-item">
-                <div class="item-text">Nuggets</div>
-                <div class="sitem-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                        class="fas fa-info-circle fa-2x"></i></div>
-            </div>
-            <div class="item-price" data-value="80">
-                <div class="item-text">80 lei</div>
-                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                        class="fas fa-cart-arrow-down"></i></div>
+            <div class="new-container">
+                <h2>lorem</h2>
+                <img src="assets/img/newsph/croissant.jpg" alt="Snow">
+                <div class="button_cont">
+                    <a class="new-a" href="X" target="_blank" rel="nofollow">
+                        <span>Go to the new...</span></a></div>
             </div>
         </li>
         <li>
-            <img src="assets/img/snacks/pring.png" alt="Could not load!">
-            <div class="content-item">
-                <div class="item-text">Pringles</div>
-                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                        class="fas fa-info-circle fa-2x"></i></div>
-            </div>
-            <div class="item-price" data-value="80">
-                <div class="item-text">55 lei</div>
-                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                        class="fas fa-cart-arrow-down"></i></div>
+            <div class="new-container">
+                <h2>lorem</h2>
+                <img src="assets/img/newsph/croissant.jpg" alt="Snow">
+                <div class="button_cont">
+                    <a class="new-a" href="X" target="_blank" rel="nofollow">
+                        <span>Go to the new...</span></a></div>
             </div>
         </li>
         <li>
-            <img src="assets/img/snacks/suh1.png" alt="Could not load!">
-            <div class="content-item">
-                <div class="item-text">Xpyc Team</div>
-                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                        class="fas fa-info-circle fa-2x"></i></div>
+            <div class="new-container">
+                <h2>lorem</h2>
+                <img src="assets/img/newsph/croissant.jpg" alt="Snow">
+                <div class="button_cont">
+                    <a class="new-a" href="X" target="_blank" rel="nofollow">
+                        <span>Go to the new...</span></a></div>
             </div>
-            <div class="item-price" data-value="80">
-                <div class="item-text">15 lei</div>
-                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                        class="fas fa-cart-arrow-down"></i></div>
+        </li>
+        <li>
+            <div class="new-container">
+                <h2>lorem</h2>
+                <img src="assets/img/newsph/croissant.jpg" alt="Snow">
+                <div class="button_cont">
+                    <a class="new-a" href="X" target="_blank" rel="nofollow">
+                        <span>Go to the new...</span></a></div>
+            </div>
+        </li>
+        <li>
+            <div class="new-container">
+                <h2>lorem</h2>
+                <img src="assets/img/newsph/croissant.jpg" alt="Snow">
+                <div class="button_cont">
+                    <a class="new-a" href="X" target="_blank" rel="nofollow">
+                        <span>Go to the new...</span></a></div>
+            </div>
+        </li>
+        <li>
+            <div class="new-container">
+                <h2>lorem</h2>
+                <img src="assets/img/newsph/croissant.jpg" alt="Snow">
+                <div class="button_cont">
+                    <a class="new-a" href="X" target="_blank" rel="nofollow">
+                        <span>Go to the new...</span></a></div>
+            </div>
+        </li>
+        <li>
+            <div class="new-container">
+                <h2>lorem</h2>
+                <img src="assets/img/newsph/croissant.jpg" alt="Snow">
+                <div class="button_cont">
+                    <a class="new-a" href="X" target="_blank" rel="nofollow">
+                        <span>Go to the new...</span></a></div>
             </div>
         </li>
     </ul>
+
 </section>
 
 <footer>
