--- a/hamb.html
+++ b/hamb.html
@@ -20,8 +20,8 @@
                 <div class="dropdown"><a href="cart.html"><i class="fas fa-shopping-cart"></i></a>
                     <div class="dropdown-content">
                         Your cart has :
-                        <mark>0</mark>
-                        items!
+                        <mark id="cart-count">0</mark>
+                        items in sum of <mark id="total-price"> 0</mark> lei!
                     </div>
                 </div>
             </li>
@@ -42,7 +42,7 @@
                 </div>
             </li>
             <li><a href="#">Restaurants</a></li>
-            <li><a href="#">News</a></li>
+            <li><a href="news.html">News</a></li>
             <li><a href="#">Job</a></li>
             <li>
                 <div class="dropdown"><a href="#">Services<i class="fas fa-angle-down"></i></a>
